[metadata]
name = HA-wolfram
version = 0.0.1
author = Neopect
author_email = tyler@tylermoen.com
description = The wolframalpha module for home-adiutor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/North-Pole-Neon/HA-wolfram
project_urls =
    Bug Tracker = https://github.com/North-Pole-Neon/HA-wolfram/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src